use ic_base_types::PrincipalId;
use ic_protobuf::registry::node::v1::NodeRewardType;
use lazy_static::lazy_static;
use maplit::btreemap;
use std::collections::BTreeMap;
use std::str::FromStr;

lazy_static! {
    pub static ref MAX_REWARDABLE_NODES_MAPPING: BTreeMap<PrincipalId, BTreeMap<NodeRewardType, u32>> = btreemap! {
        "2aemz-63apz-bds45-nypax-oj52g-fyl6i-sjhtv-ysu5t-hqvve-ygtcr-yae" => btreemap! {"type3.1" => 6},
        "2mie5-aobqb-l2gvy-2or7x-di7cx-3xoij-ifiej-zqxlm-hzn6s-lp2ih-kqe" => btreemap! {},
        "2psns-jgqpk-xogog-amfsv-ztyvo-6aa5k-i367z-fshvy-6kxud-5bycv-sqe" => btreemap! {"type1.1" => 7},
        "2rqo7-ot2kv-upof3-odw3y-sjckb-qeibt-n56vj-7b4pt-bvrtg-zay53-4qe" => btreemap! {"type1.1" => 28},
        "2rzvs-dyynq-3chdr-svjev-vdotj-blgs2-yrxfu-jbpm4-wzzht-zirb4-mqe" => btreemap! {"type3" => 6},
        "2w62i-dpc35-jark3-6jewa-kaxls-3v3hb-s6ksu-znlnf-2mfwp-q57ms-uae" => btreemap! {"type3.1" => 1},
        "3bohy-zygmq-6novb-wm65r-3k3y2-deh42-7emld-zhqo7-xl2oa-iextm-fae" => btreemap! {"type3.1" => 12},
        "3nu7r-l6i5c-jlmhi-fmmhm-4wcw4-ndlwb-yovrx-o3wxh-suzew-hvbbo-7qe" => btreemap! {"type1.1" => 19},
        "3pvkg-yll72-7bgau-ifrdj-5hfoz-qurfj-vvl2l-6ztjm-rdbg2-56al6-cqe" => btreemap! {},
        "3sm7v-xy7wb-u52om-cq3td-wboo7-aj4fi-dqnam-jahlz-swqib-ynipm-mqe" => btreemap! {"type3.1" => 4},
        "3xiew-2wo3x-tnbn2-o7kok-wwsnw-7koo2-gna5r-rlrt3-zotsh-dwpg6-kae" => btreemap! {"type1.1" => 14},
        "4isre-d3zxy-xpque-tagdf-xdzjp-hk7x3-szquu-kuwej-52cfy-f6jwc-zqe" => btreemap! {"type1.1" => 42},
        "4kxqv-qnvww-t2rou-ctvaj-5cqqy-y2iyo-dbmqv-wsm36-t2q3k-nbep3-uqe" => btreemap! {"type1.1" => 3},
        "4lbqo-vgpoe-kemak-voout-777uo-kk74n-fnct3-pc4eg-3txi3-7cghf-rqe" => btreemap! {"type3.1" => 5},
        "4lp6i-khv7q-lkgk3-hhrc6-ysjag-korh7-ysojw-7gv3h-glhdz-rpjrt-sqe" => btreemap! {"type1.1" => 28},
        "5atxd-q4jom-dtpxr-awd3p-e562x-hpavj-godtj-g6vmz-of2c6-ildhh-fae" => btreemap! {"type1.1" => 28},
        "5bnm2-ul7nx-s2xfc-3mzzu-2yfyz-lu2xp-65epq-43o3y-qs7y3-jv2uc-yae" => btreemap! {"type1.1" => 21},
        "5dwhe-vpbuf-zz5ml-ylu6k-7y2z2-36ywv-5e4wf-advxd-3endk-icvg4-cae" => btreemap! {"type3.1" => 10},
        "5of43-k6u44-qnx76-nu2es-wm4vv-lidb2-4uveq-j6f62-iiagz-kaafq-gae" => btreemap! {"type1.1" => 28},
        "5p6xp-glfoz-fgh6d-4rx7e-hix7t-c4vcp-u2xhn-gv4mm-fkozw-6mntb-7qe" => btreemap! {"type3.1" => 4},
        "5syyj-syqbw-ubz3m-f4lkg-u7v2j-madhv-3s4vx-yl67f-bets5-xmrbf-zae" => btreemap! {"type1.1" => 14},
        "5xayl-wn77t-4xafn-4fvvm-2ibo2-jdbqj-7au4o-ewjwn-fzrzm-tp3uu-vqe" => btreemap! {"type3.1" => 1},
        "6hl6v-hhywj-4glb3-pptvl-tb2xq-l324t-hp3xt-buhuc-f4u5y-ig2js-yqe" => btreemap! {"type3.1" => 1},
        "6jel7-zolww-jy5ha-bwkva-fv5dx-nkolq-scb63-azu3w-ne3rr-ite7s-sae" => btreemap! {"type3.1" => 3},
        "6jyzv-q6o4l-6mlhe-viw3a-gpj62-vnklh-jgpbb-esejf-xp27x-eql5q-wqe" => btreemap! {"type3.1" => 1},
        "6oxlv-umuxh-6cvbh-ldske-gafq4-5bcq4-4dfow-x7ytv-szjd2-jr3vr-oae" => btreemap! {},
        "6zkgt-w7agd-kpvte-mia3x-sxucz-u2r7k-vfphb-tyhvv-i6hsm-h2ueo-uqe" => btreemap! {"type3.1" => 8},
        "74vhn-m7sov-ufexz-rjuzq-hgidx-jls6i-xufww-phun6-s4alk-mt3ha-5qe" => btreemap! {"type3.1" => 4},
        "7ldwr-vrnjp-p23uh-6czzq-7qp4h-qhvw2-c2by5-3jpqm-4nuu3-vx5dz-fae" => btreemap! {"type1.1" => 10},
        "7mdax-eg2jn-ohw2m-ku4rv-of3nm-4kqs2-3azta-6xwvu-f6fsh-5ehqq-gae" => btreemap! {"type3.1" => 1},
        "7rw6b-6r7qv-al3uk-rimg7-ifkjv-hettz-lhmly-t55g7-xrwac-25ayy-wae" => btreemap! {"type3.1" => 15},
        "7v3fg-puvon-km4rh-gnvqw-pmlug-5iaen-s3v45-kwowl-etrtl-xc245-qqe" => btreemap! {},
        "a5glg-n6ul6-rkuc7-idthk-fb2fe-d5m75-4g4l7-22yko-h27pr-q3a7k-lae" => btreemap! {"type1.1" => 4},
        "a7uqi-wzcgk-bjijx-f562s-a2pm6-qriyn-qmvcw-jtzrw-nx64c-3ocff-iqe" => btreemap! {},
        "aaxec-cijpz-vzdwe-546fi-vahtf-s2awa-ldn7q-mzl2j-gmvhz-56zlq-mqe" => btreemap! {"type3.1" => 7},
        "aec54-d3vzc-l6qfr-p4zuh-jiwam-gpakf-z7ie7-ju3t4-h6nol-762af-3qe" => btreemap! {"type3.1" => 1},
        "anodw-youcx-pycyh-tkyat-znvdz-rtmop-t7tpo-pyrcn-nuzzw-qp35i-2ae" => btreemap! {"type1.1" => 14},
        "ap2qh-n5jrf-vpjj6-i5pap-qxnhr-4tnar-yodpw-kh6fy-c5w4z-gibij-5ae" => btreemap! {"type3" => 2},
        "bchze-nh6ac-2ld63-4grel-5uq74-jvvp6-s2yby-uho2w-ealfc-qn34i-yqe" => btreemap! {"type3.1" => 1},
        "bftbl-quva3-hsn2r-qsjde-goegh-rupku-gb7xx-utj6e-lswl4-hclva-bqe" => btreemap! {"type3.1" => 1},
        "bm2lc-ec4xa-briqh-l3acc-wvxfw-u2mn2-3njpp-53rqa-5guxt-hyhce-7ae" => btreemap! {"type3" => 6},
        "bmlhw-kinr6-7cyv5-3o3v6-ic6tw-pnzk3-jycod-6d7sw-owaft-3b6k3-kqe" => btreemap! {"type1" => 14},
        "bnfpu-skwq4-d5v2n-a6a42-k3myf-qyfmt-4qik2-rjpms-v5dyu-eenei-sae" => btreemap! {"type3.1" => 1},
        "byspq-73pbj-e44pb-5gq3o-a6sqa-p3p3l-blq2j-dtjup-77zyx-k26zh-aae" => btreemap! {"type1.1" => 1},
        "c3oqp-tbi6n-kbsri-citzo-vyed4-paf2i-3qlc7-4lkxm-qowqy-otcfx-pae" => btreemap! {"type3.1" => 1},
        "c5ssg-eh22p-pmsn6-fpjzj-k5nql-mx5mc-7gb4a-4klco-c4f37-ydnfp-bae" => btreemap! {"type1.1" => 28},
        "ceta5-wu56p-aqtjd-2cy2f-atzz3-srckr-wkupd-ratc5-62ckj-vsj5u-zae" => btreemap! {"type3.1" => 2},
        "ciprs-d7ktn-eiqrv-pqbcf-npk57-ty4m3-npkk2-yu4en-d4ccs-ek5xw-dae" => btreemap! {"type1.1" => 28},
        "cn25n-ky3ou-4j4kr-znsm5-ixcjv-l66i2-wtase-xfuro-g4uaa-4tif4-tae" => btreemap! {"type3.1" => 1},
        "codio-e5e6p-ol6sn-o3mgw-r7v5p-4jmch-a7exl-7pifz-cw4gn-ah47y-6ae" => btreemap! {},
        "cqjev-4qb7l-xv373-jfmhi-73n3a-cxhst-p6okb-vywwc-a4zbi-6sf3u-bae" => btreemap! {"type1.1" => 14},
        "d4bin-5o2wg-ycbdq-yljr7-45pjv-ptf6d-v243j-vg6x5-dlo7t-yqu62-5qe" => btreemap! {"type1.1" => 25},
        "db7fe-oft52-pi5du-za72s-sh5oy-6wmnv-hje7y-i5k2l-txseu-anq6c-rqe" => btreemap! {"type1.1" => 5},
        "dg7of-7gsgk-b7ptj-mcrrc-bxcae-6yg2o-oa57j-64cyo-vbc4d-t3ax5-oqe" => btreemap! {"type3.1" => 7},
        "dm2ty-kun2w-em4v2-xshvb-3bmsj-mrjst-g246o-ik4kl-y3ckl-gvaqh-jae" => btreemap! {"type3.1" => 1},
        "dmqux-7xfgo-xd535-6kkav-qjjnm-c7zza-g4j6g-ooctw-gdisv-zvh6z-7qe" => btreemap! {"type1.1" => 14},
        "dvfhx-jb24w-j6t5m-i7hv7-7a6on-heiyd-cgjrk-kby5c-nhej4-lmbql-yae" => btreemap! {"type1.1" => 28},
        "eikix-bqjrk-7eadr-nvgoa-drao2-2t54l-kfbs2-34gdr-sbssy-ir4rj-rae" => btreemap! {"type1.1" => 28},
        "eqv2i-6dtlf-bhbjd-2popw-vvavp-7xzci-6gdd7-qxgox-wdw5w-l3a4w-eae" => btreemap! {"type3.1" => 8},
        "eu5wc-g7r7l-zzy2o-227af-hfvin-orflw-4vdlf-j7gks-n5wrj-zezt7-tqe" => btreemap! {"type3" => 12},
        "f3toa-2qbnz-67mnl-ws76t-asi36-oz7vd-w5xjx-u5n75-jchls-uhioe-6qe" => btreemap! {"type3.1" => 6},
        "f4ckh-4va5f-p434o-iy3fa-lw3ct-4qguu-gefta-x2rx3-pltka-aq3si-uqe" => btreemap! {"type3.1" => 1},
        "f4rto-feg3b-4ubuk-ggxzh-j5wxn-5nvwh-l4syp-5nrjv-r5jeq-ywxxe-7qe" => btreemap! {"type3.1" => 1},
        "feb2q-mgxwe-okz7r-juws2-mahg4-wflqu-oeflf-kvh4r-qaqit-hbqpg-uqe" => btreemap! {"type1.1" => 14},
        "fthz3-5otsb-xppaq-zhlut-dxel6-5fgxj-oz56h-r7zrz-xlq5z-cxpe4-uae" => btreemap! {"type1.1" => 14},
        "gl27f-y5srq-yy5ot-v4x5z-y2a2s-sgoor-l4gjg-qv4x4-v2olb-dz4dc-wae" => btreemap! {"type1.1" => 28},
        "gsps3-qfdvq-s2sxt-d2v3e-yk4kk-w4bvn-tznft-y7x4x-im7if-umuub-wqe" => btreemap! {"type1.1" => 14},
        "gv77f-r7ahj-gkbd3-6il3n-lfgb5-3ojpt-uxydp-5rdls-4xqam-upxju-2ae" => btreemap! {"type1.1" => 28},
        "h6fpp-nacd4-fwrj6-fkabo-wbmpo-nvyex-csgvq-itqax-lj3rz-vfx5h-iqe" => btreemap! {"type3.1" => 2},
        "hoqyg-qkf6b-ulmyi-zfk6z-fuvlo-pekr6-goigz-qweij-xhghd-vibjl-jqe" => btreemap! {"type3.1" => 3},
        "hsi7b-rl4wt-lum3m-ophfi-oxgx5-u2q7r-ak7ag-nyiik-c4gam-epo2r-3qe" => btreemap! {},
        "ihcmc-o45dd-elg2s-ntnhr-l4c35-datk6-gsyeb-m77as-yjzd2-4qyxz-xqe" => btreemap! {"type3.1" => 2},
        "ihpb5-7zcjy-eceio-pikgo-r4aei-ik66s-fdxwj-yacqc-dxt67-jluxx-yqe" => btreemap! {},
        "ilwyu-pfcy7-2iy3t-cjmsx-nrw4l-6rmek-lduaa-yha6b-7wck6-3usxt-cqe" => btreemap! {},
        "inluf-zswst-3owy3-xklsg-jnn6r-izoj7-pf3il-fo33d-ghbka-lc34p-zqe" => btreemap! {"type3.1" => 7},
        "iubpe-vrzpt-cdf5f-kkzhq-rgp63-dkbfo-fje7f-6aknf-jekzg-3s7tv-oae" => btreemap! {"type3.1" => 18},
        "jptla-fkfxd-7oesr-6vbp4-6tx22-c7ome-zo3ox-2ylzj-llei6-7xcw3-hqe" => btreemap! {"type3.1" => 5},
        "jqwj7-ka4re-ivbzs-yxlfw-7cwcr-svmcs-c53wv-hyrww-svl3i-rmdis-iae" => btreemap! {},
        "jtrpk-wokqg-aqmcn-esiq7-fip4e-dl7lv-iwdyj-cu5pm-wbg7i-4jl4t-wae" => btreemap! {"type3.1" => 2},
        "k4aor-vlk45-2i4fz-pp3cs-nu5jg-35nva-ftbjl-7fxfd-fks6n-6taxd-4qe" => btreemap! {"type1.1" => 14},
        "kcyob-6amxm-wgpbs-gbyxc-pxp7l-tdacq-gjhv4-wg37h-2p6lx-h7hmi-4ae" => btreemap! {"type3.1" => 1},
        "kguzs-hshnk-cn46m-vabri-t7mtm-th4lo-qsf5g-f2trp-xxatj-44aut-kqe" => btreemap! {"type1.1" => 28},
        "kn6jm-wbdbm-2djab-iyyjm-n3mpl-nxvsl-wr7ka-nq5rp-d4opu-jbnkr-bae" => btreemap! {"type1.1" => 14},
        "l47io-jd46a-nmebs-sybyw-wxebj-jhs7k-45d6h-xg6p6-xy5f4-6ru2n-iae" => btreemap! {"type3.1" => 1},
        "l5lhp-734i5-tbott-vipvc-vud2f-pfh7r-g3227-tgkdj-4rggm-abc2e-cae" => btreemap! {"type3.1" => 18},
        "lgp6d-brhlv-35izu-khc6p-rfszo-zdwng-xbtkh-xyvjg-y3due-7ha7t-uae" => btreemap! {"type1.1" => 28},
        "lh42a-fzwyv-lhply-zt6e3-k6iey-f7rnm-5jgsr-7bz4v-wp2w6-kydfy-pqe" => btreemap! {"type3.1" => 1},
        "lis4o-siuek-6zrm6-g5pkh-lswnt-ttsd4-henvb-d6mit-lgfpr-lynph-xae" => btreemap! {"type3.1" => 8},
        "mbnsu-w4xfc-pmdok-r2lwo-wxfr4-gigu5-4idcm-5uuuy-znvby-biiny-jqe" => btreemap! {"type3.1" => 5},
        "mjeqs-wxqp7-tecvn-77uxe-eowch-4l4gy-6lc6f-ys6je-qnybm-5fxya-qqe" => btreemap! {"type1.1" => 28},
        "mpmyf-juliu-5qwcu-ofamg-es7ug-4mjt4-w5lht-dbrfb-ualjm-hcwmn-pae" => btreemap! {"type3" => 12},
        "mw64v-jynex-7tu52-5a3te-ifbop-nh7y7-w7lno-ymmht-b7fmy-wfhha-gqe" => btreemap! {"type1.1" => 28},
        "mwn4q-m7agh-z77ry-lk3ee-6ndte-kkfmm-yxtb4-mfqyf-uq2e7-xqmyh-yqe" => btreemap! {"type1.1" => 28},
        "ngpk7-cjdtu-h3zkz-kum5b-q7fs5-teooc-ipecm-z2gci-qmfj6-6sxdf-tae" => btreemap! {"type3.1" => 1},
        "nhr3z-ekrj4-7usls-kmdbv-esy2j-3wvez-ck46k-qpdn6-i23c2-5xkgr-dae" => btreemap! {"type3.1" => 3},
        "nj365-76cya-vjwgn-vyuxb-y74nh-bhlti-l6mzp-5efbh-u7nld-5jeba-kae" => btreemap! {},
        "npluh-e7p53-5krtn-yotea-tkczh-cf53b-sfwpi-wsccj-mhneg-7aklr-uae" => btreemap! {"type3.1" => 1},
        "nvocp-jlbys-d44wi-od3pv-iws4n-2nll3-73hqk-koh72-3obvg-kt5v3-fae" => btreemap! {"type3.1" => 2},
        "nwpoe-kxdae-5afgc-itoe7-xecg7-k74et-jggwc-lgz3n-tjs6e-mtqos-5ae" => btreemap! {},
        "o36jk-wtdjp-uu75u-vtmlr-iy4fy-w767n-pdtcd-7rd7l-xwkeo-dvs5s-hae" => btreemap! {"type3.1" => 1},
        "oorkg-ilned-36bwb-vyprm-56g55-hp6xq-gucq3-fmn2i-44a4e-txzlp-gqe" => btreemap! {"type1.1" => 14},
        "ozfkj-ugoiu-5k6fd-yicvj-k6wbj-fltwh-4vmwd-mqazn-fbdkn-j5uel-3qe" => btreemap! {"type1.1" => 14},
        "paxme-ikvh3-v6cve-in3jx-z6xf2-x67nq-4yqf5-ufdag-c7os3-byb4f-cae" => btreemap! {"type1.1" => 28},
        "pgunx-7pdft-jwvuo-j65kd-2mdxl-bi3r7-znv4c-vw2q3-2gno4-2uoeg-wqe" => btreemap! {},
        "pi3wm-ofu73-5wyma-gec6p-lplqp-6euwt-c5jjb-pwaey-gxmlr-rzqmk-xqe" => btreemap! {"type1.1" => 1},
        "q4gds-li2kf-dhmi6-vmtxg-zrgep-3te7r-2a4ji-nszwv-66biu-dkl6k-eqe" => btreemap! {},
        "qaes5-yo2iq-rhzta-vsh6g-ksq6o-yxtlb-lakue-snalc-ubxec-h3hy6-hae" => btreemap! {"type3.1" => 4},
        "qffmn-uqkl2-uuw6l-jo5i6-obdek-tix6f-u4odv-j3265-pcpcn-jy5le-lae" => btreemap! {"type1.1" => 11},
        "qxonx-2oxpk-42rse-zgvml-vtbzo-5u7zz-dueqb-olyxr-luapv-qxdax-wae" => btreemap! {"type1.1" => 3},
        "qyawb-e3c5d-fnbik-cuhw3-jmf75-iqley-zyryw-szosz-w4yrk-fnmba-hae" => btreemap! {"type3.1" => 1},
        "raiov-7se2a-qvvut-fosrr-ewckg-wwvx5-yiyih-msga4-kibn2-tel4j-uae" => btreemap! {"type3.1" => 2},
        "redpf-rrb5x-sa2it-zhbh7-q2fsp-bqlwz-4mf4y-tgxmj-g5y7p-ezjtj-5qe" => btreemap! {},
        "rhtt6-acsjc-c73k7-mnd7w-5253w-h35fr-lfknt-as6bb-rgxoy-xe4zr-dae" => btreemap! {"type3.1" => 1},
        "rhuve-see6x-rv6g4-namsu-ckecy-uag4k-t3aih-rejnj-67tro-7ymwp-gae" => btreemap! {"type3.1" => 1},
        "ri4lg-drli2-d5zpi-tsseq-soivo-qrydm-cvjwd-dbmgz-al7fj-4al6w-iae" => btreemap! {"type3.1" => 12},
        "rpfog-5kglu-vhkia-m77kq-vrnd7-inji3-yyhpx-nu76x-36np7-4ghc2-3qe" => btreemap! {},
        "rsrz6-sc2oj-azljq-mxw7a-daryz-yxmzm-qyn67-6hls2-vnn5d-izzf5-pqe" => btreemap! {},
        "rzskv-pde6u-albub-bojhe-odunj-k3nnf-j2eag-akkjm-o3ydz-z5tcy-vae" => btreemap! {"type1.1" => 1},
        "s7dud-dfedw-dmrax-rjvop-5k4qw-htm4w-gj7ak-j2itz-txwwn-o5ymv-tae" => btreemap! {"type1.1" => 2},
        "slaxf-2q2iy-ikmsy-u2jnq-ev2u2-z2ryl-5w4ri-uf2v3-hxfuc-yrdbx-uae" => btreemap! {"type3.1" => 10},
        "sm6rh-sldoa-opp4o-d7ckn-y4r2g-eoqhv-nymok-teuto-4e5ep-yt6ky-bqe" => btreemap! {},
        "spsu4-5hl4t-bfubp-qvoko-jprw4-wt7ou-nlnbk-gb5ib-aqnoo-g4gl6-kae" => btreemap! {"type1.1" => 14},
        "sqxhb-kreor-og6yg-hmbpu-mr3k7-b72at-dxjqk-xisvr-qkb6k-qmbt3-dae" => btreemap! {"type1.1" => 28},
        "srrm2-zawrj-4euwg-w24k6-yiwlj-ln6r7-kxkgb-itaal-efw4m-fp36x-bqe" => btreemap! {"type3.1" => 7},
        "t37p3-2557c-vnn75-vn4xk-3x7kp-6nh4c-e4pv2-bhlnv-ee4f5-7chq4-rae" => btreemap! {},
        "tcn4t-xktz4-qm6yk-udidk-m5ays-paeqx-xaevx-hb3fj-nvocf-vr5yq-yqe" => btreemap! {"type1.1" => 11},
        "tisgk-lbq4u-zxwec-ak7ze-6ngg3-tjxhb-wasri-ska3d-ro6by-ba7vc-5ae" => btreemap! {"type1.1" => 14},
        "tnqod-r52q6-ub547-756zx-7fokh-l5uga-23zbn-lll2x-ebe5r-fdgyh-oae" => btreemap! {},
        "u4f3y-wubbf-lxfqi-v43pp-dfp7e-gxxct-22r5h-6mcbw-vmj33-5qqv5-nae" => btreemap! {},
        "u7afs-z2fqh-zbqyo-jufwe-3vqqs-chc7f-k2fe4-rt66w-l4qia-keuuj-qqe" => btreemap! {},
        "ueggl-7wvx2-2eezj-mgjrg-w6tmy-ngmye-xxbwu-gumli-hdf7u-zzpng-3ae" => btreemap! {"type3.1" => 2},
        "ujq4k-55epc-pg2bt-jt2f5-6vaq3-diru7-edprm-42rd2-j7zzd-yjaai-2qe" => btreemap! {"type1.1" => 9},
        "ukji3-ju5bx-ty5r7-qwk4p-eobil-isp26-fsomg-44kwf-j4ew7-ozkqy-wqe" => btreemap! {"type3" => 16, "type3.1" => 9},
        "vezyg-car5u-zvj3o-epfvq-qjnr6-evurx-ecxv3-q3oia-2qdu2-vssem-6qe" => btreemap! {"type3.1" => 1},
        "vgi2b-fhndq-24oha-7rldm-opbg7-juriu-ecmms-llcn6-f5dw4-x3m5j-rqe" => btreemap! {"type3.1" => 1},
        "vicvb-nkzkt-tj2lz-yzzw4-gfcsj-3eggv-izdti-tarpt-fsojm-lgq22-wae" => btreemap! {"type1.1" => 28},
        "vkwql-433e7-au6b7-v5g7z-tduiu-no4od-6wb4c-z5zru-vzssq-zwspo-dqe" => btreemap! {},
        "vqe65-zvwhc-x7bw7-76c74-3dc6v-v6uzb-nyfvb-6wgnv-nhiew-fkoug-oqe" => btreemap! {"type1.1" => 1},
        "vzsx4-ldpic-3zcoa-mfki2-gfsai-ok7ap-gb2sp-fxvaf-ckd7h-jluem-qqe" => btreemap! {"type3" => 8, "type3.1" => 10},
        "w22jb-r5bxs-5eyh6-yucbf-6aocs-bomyg-x4rix-ewa2i-ccpsi-ugend-7ae" => btreemap! {"type3.1" => 1},
        "wmrev-cdq34-iqwdm-oeaak-f6kch-s4axw-ojbhe-yuolf-bazh4-rjdty-oae" => btreemap! {},
        "wqyl3-uvtrm-5lhi3-rjcas-ntrhs-bimkv-viu7b-2tff6-ervao-u2cjg-wqe" => btreemap! {"type1.1" => 1},
        "wrg4t-j7q47-ujpct-veypa-6s2w7-6jw5o-z4iec-wc7er-egjlo-t4kza-7qe" => btreemap! {"type1.1" => 28},
        "wtsc7-nooey-5r454-alljc-g2thc-i52hy-acwfo-y2oub-vthqx-3wpy2-fqe" => btreemap! {"type3.1" => 1},
        "wuhly-wzzty-vwzqm-47prf-tidoe-bfiay-f66cb-f4y4a-qle2m-6afa2-cqe" => btreemap! {"type1.1" => 3},
        "x7fjr-ngws7-jpjtq-e3c7s-735uk-gyusv-ppoeh-n4xhg-fwjck-um6pf-fae" => btreemap! {"type3.1" => 6},
        "xbvdm-vrdwg-wcvpo-dwsdp-akpmo-sresk-53cg5-mwpn3-adhco-rwzym-gqe" => btreemap! {"type3.1" => 1},
        "xcne4-m67do-bnrkt-ny5xy-gxepb-5jycf-kcuvt-bdmh6-w565c-fvmdo-oae" => btreemap! {"type1.1" => 1},
        "xdara-l6rzn-6rkv5-lwrfr-6idlg-nptsg-7x64q-w4vfd-dhwre-2pkwz-qqe" => btreemap! {"type1.1" => 14},
        "xh7oz-ir657-v4jec-houqx-fzjww-cdhhn-mock3-e5eat-4a4pb-yxljv-mqe" => btreemap! {"type3.1" => 1},
        "xph6u-z3z2t-s7hh7-gtlxh-bbgbx-aatlm-eab4o-bsank-nqruh-3ub4q-sae" => btreemap! {"type0" => 28},
        "xr5zy-ul4p7-jknh5-gvj4s-z5k3u-tufip-hwpdl-dfeh7-flo7e-sxqgi-pqe" => btreemap! {"type3.1" => 1},
        "xva5m-wnbzg-6ean2-jy7nd-x45u2-2nyym-meijo-f5qek-raubh-3n76g-jqe" => btreemap! {"type1.1" => 28},
        "y2spu-chbfj-rqcqx-dt6yl-eni7b-knczq-afpyy-tm65i-kzrlx-fjdtc-oqe" => btreemap! {"type3.1" => 1},
        "y3du2-sq3a6-77vah-wj3cb-r72q2-lxo4k-t2fxb-odc7n-xyf7n-zbnkd-vae" => btreemap! {"type3.1" => 1},
        "y3nsb-fnmit-izacl-h6xxg-djjye-lgpll-hpsot-oztv7-ezzge-7w2ot-nqe" => btreemap! {"type3.1" => 1},
        "y4c7z-5wyt7-h4dtr-s77cd-t5pue-ajl7h-65ct4-ab5dr-fjaqa-x63kh-xqe" => btreemap! {"type1.1" => 1},
        "yedtm-rm5av-s256v-zzi4w-7lxen-koqg6-pzak3-rjzko-xfu2c-dw7eo-bae" => btreemap! {},
        "yhfy4-ny5ww-huz33-bkxym-eu27d-htlt4-yi77a-hvdqb-wpdlv-2cky7-uae" => btreemap! {"type3.1" => 18},
        "ylbc3-d72nf-cv76h-era7m-zefob-r5kyw-kvdtp-xq4ep-nthfy-ml5ua-iae" => btreemap! {"type1.1" => 42},
        "ymenq-4sr5h-3imm6-kjjw6-2knuy-ntmlu-oqf5k-vdnzv-z427q-gqdot-sae" => btreemap! {"type3.1" => 6},
        "yngfj-akg4s-nectt-whzgk-5zqbw-z3e5u-zuycn-zqygi-xz4vt-244v6-zae" => btreemap! {"type1.1" => 14},
        "ywjtr-pq5wc-m6foq-tyxvk-2a3wc-dlg3k-aaebf-6rk2d-5yvn7-tf743-gqe" => btreemap! {"type3.1" => 6},
        "z2o65-c4ahi-sayhz-f5hnm-rbb56-4py6j-grmqx-ixfly-velus-4duua-7ae" => btreemap! {"type1.1" => 13},
        "z4wll-7faab-6nzvh-bongq-wk46y-3y5th-ou7ft-lwlmf-35vzy-3bmqo-3qe" => btreemap! {"type1.1" => 14},
        "z6cfb-dbya3-nh4pm-nyteq-76n7d-xzi27-tf3cg-t7sz7-244qt-6rnjy-3ae" => btreemap! {"type3.1" => 10},
        "z7r2x-uehbj-zovap-p6tvn-m6fso-uzoyx-coz3y-pc6gh-k2boc-aphlm-bae" => btreemap! {"type3.1" => 1},
        "zc635-ppr46-ap6eg-pghtn-wtnxz-6czvv-a4uxm-adjgb-wtoh4-2ddnl-uae" => btreemap! {"type3.1" => 6},
        "zhlzs-2otly-4u7vw-qkz7m-2m7aw-bhwmv-yylta-7w4zi-yrrpj-g7eoa-2qe" => btreemap! {"type3" => 1},
        "ziab5-kch42-6jhxt-26xf7-wej5v-xw4oh-36m5y-yba7v-xrtpv-pobv3-fqe" => btreemap! {},
        "zsywq-v573p-pkz7x-qqkdd-34sdg-6y3f2-37cdu-y7xe5-kcxj6-23eoz-pae" => btreemap! {},
    }
    .into_iter()
    .map(|(node_operator_id, max_rewardable_nodes)| {
        let node_operator_id_processed = PrincipalId::from_str(node_operator_id).unwrap();
        let max_rewardable_nodes_processed = max_rewardable_nodes
            .into_iter()
            .map(|(node_reward_type, count)| (NodeRewardType::from(node_reward_type.to_string()), count as u32))
            .collect();

        (node_operator_id_processed, max_rewardable_nodes_processed)
    })
    .collect();
}
